Fixed the problem with too much margin for header

--- a/web/app/plugins/wallly/stylesheet/style.css
+++ b/web/app/plugins/wallly/stylesheet/style.css
@@ -184,7 +184,7 @@ h4{
 }
 
 .wallly-img-header {
-  height: 160px;
+  height: 7vh;
 }
 
 .wallly-img-header.left {
